--- a/style.css
+++ b/style.css
@@ -1,39 +1,44 @@
-body{
-  margin: 0;
-  padding: 0;
-  background-image: url(backgroung-image.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  text-align: center;
-}
-
-div{
-  width: 450px;
-  background-color: rgba(0, 0, 0, 0.4);
-  padding: 100px;
-  margin: auto;
-  color: white;
-  font-family: 'Poiret One', cursive;
-  border-radius: 20px;
-}
-
-h1{
+[data-testid="slackUserName"] {
   font-family: 'PT Serif', serif;
+  text-align: center;
   font-size: 40px;
 }
 
-img{
-  width: 200px;
-  height: 200px;
-
+div {
+  text-align: center;
 }
 
-a{
-  text-decoration: none;
+div a {
+  background-color: rgb(66, 86, 196);
+  border-radius: 20px;
+  padding: 7px;
   color: white;
 }
 
-a:hover{
-  color: aqua;
+body {
+  background-color: plum;
 }
 
+[data-testid="slackDisplayImage"] {
+  width: 200px;
+  height: 200px;
+}
+
+[data-testid="currentDayOfTheWeek"] {
+  text-align: center;
+}
+
+[data-testid="currentUTCTime"] {
+  text-align: center;
+}
+
+[data-testid="myTrack"] {
+  text-align: center;
+}
+
+[data-testid="githubURL"] {
+  text-decoration: none;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+}
